# gmx_correlation

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  correlation_core.cpp  correlation_core.h  gcmi.cpp  gcmi_metal.h  gmx_correlation.cpp  install.sh  kraskov.cpp  kraskov_metal.h  kraskov_metal.mm  requirements.txt  te_metal.h  te_metal.mm  transfer_entropy.cpp  transfer_entropy.h
.github/workflows/: tests.yml
analysis/: analyze_matrix.py
lib/: correlation_core.cpp  gcmi.cpp  gcmi.h  gcmi_metal.h  gcmi_metal.mm  kraskov_gpu.cu  kraskov_gpu.h  kraskov_metal.mm  te_metal.h  te_metal.mm  transfer_entropy.cpp  transfer_entropy.h
src/: gmx_correlation.cpp
tests/: conftest.py  test_gcmi.py  test_kraskov.py  test_matrix_io.py  test_te_validation.py
tutorials/: tutorial.ipynb
